--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,22 +30,46 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Step 1: Explicitly manage and potentially invalidate the cache
+      - name: Cache npm dependencies
+        uses: actions/cache@v4 # Use latest cache action v4
+        id: npm-cache # Give the cache step an ID
+        with:
+          path: ~/.npm # Cache the npm cache directory (~/.npm)
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-v1 # Add a version suffix '-v1'
+          restore-keys: |
+            ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-node-
+
+      # Step 2: Set up Node.js LTS - *without* its built-in cache since we handle it manually above
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20.13.1
-          cache: "npm"
+          # No cache: 'npm' here - we are using actions/cache manually above
+
+      # Step 3: Install dependencies using npm ci
+      # Uses the cache restored in the 'Cache npm dependencies' step if available
       - name: Install dependencies
         run: npm ci
+
+      # Step 4: Build the project
       - name: Build
-        run: npm run build
+        run: npm run build # Ensure this command outputs to './dist' or update path below
+
+      # Step 5: Configure GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      # Step 6: Upload the build artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
+          # Upload dist folder (or change if your build output is different)
           path: "./dist"
+
+      # Step 7: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
